# thrust

./: Cargo.toml  config.json
src/: config.rs  main.rs
