[package]
name = "thrust"
version = "0.1.0"
authors = ["shepherd-linux <formal.shepherd@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
eframe = "0.12.0" # Gives us egui, epi and web+native backends

[features]
default = []
http = ["eframe/http"] # Enable if you want to do http requests
#persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown